# warikan-copy

./: .gitignore  API.md  MINUTES.md  README.md  automation.sh  boot.sh
.github/workflows/: ci.yaml  readme.md
frontend/: README.md
frontend/public/: index.html
frontend/src/: ApproveGroup.css  ApproveGroup.js  JoinGroup.css  JoinGroup.js  NewGroup.css  NewGroup.js  NewTicket.css  NewTicket.js  Root.css  Root.js  SettleGroup.css  SettleGroup.js  ShowGroups.css  ShowGroups.js  UpdateTicket.css  UpdateTicket.js  index.css  index.js
frontend/src/component/: Button.css  Button.js  FriendWarning.css  FriendWarning.js  InputLabel.css  InputLabel.js  LendersList.css  LendersList.js  PaymentList.css  PaymentList.js  Spinner.css  Spinner.js  Subtitle.css  Subtitle.js  TicketAccordion.css  TicketAccordion.js  TicketBox.css  TicketBox.js  Title.css  Title.js  UserPicker.css  UserPicker.js  UserTable.css  UserTable.js
frontend/src/service/: API.js  dummy.js  storage.js  warikanAPI.js
server/: .env.example  .gcloudignore  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
server/config/: flex_messages.py  settings.py
server/models/: flex_message.py  transaction.py  transaction_group.py  user.py
server/utils/: get_cash_flow.py
skazu1210_deliverables/: VisionAPI.ipynb
